--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,28 +1,47 @@
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Vegefoods</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="index.html">VegeDepot</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav"
+      aria-expanded="false" aria-label="Toggle navigation">
       <span class="oi oi-menu"></span> Menu
     </button>
 
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+        <li class="nav-item active"><a routerLink="/" class="nav-link">Home</a></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
+          <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">Shop</a>
           <div class="dropdown-menu" aria-labelledby="dropdown04">
-            <a class="dropdown-item" href="shop.html">Shop</a>
+            <a class="dropdown-item" routerLink="/shoplist">Shop</a>
             <a class="dropdown-item" href="wishlist.html">Wishlist</a>
             <a class="dropdown-item" href="product-single.html">Single Product</a>
-            <a class="dropdown-item" href="cart.html">Cart</a>
-            <a class="dropdown-item" href="checkout.html">Checkout</a>
+            <a class="dropdown-item" routerLink="/cart">Cart</a>
+            <a class="dropdown-item" routerLink="/checkout">Checkout</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown" *ngIf="userIsAdmin === 'admin' && userIsAuthenticated">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">Admin</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown04">
+            <a class="dropdown-item" routerLink="/addproduct">Add Product</a>
+            <a class="dropdown-item" routerLink="/productlist">Product List</a>
+            <a class="dropdown-item" routerLink="/orderlist">Manage Orders</a>
+            <a class="dropdown-item" routerLink="/userlist">Users</a>
+            <!-- <a class="dropdown-item" href="checkout.html">Checkout</a>  -->
           </div>
         </li>
         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-        <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
+        <li class="nav-item cta cta-colored"><a routerLink="/cart" class="nav-link"><span
+              class="icon-shopping_cart"></span>{{cartItems}}</a></li>
 
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a *ngIf="!userIsAuthenticated" class="nav-link" routerLink="/login">Login</a></li>
+        <li class="nav-item"><a *ngIf="!userIsAuthenticated" class="nav-link" routerLink="/signup">Sign Up</a></li>
+        <li class="nav-item"><a *ngIf="userIsAuthenticated" class="nav-link" (click)="onLogout()">Logout</a></li>
       </ul>
     </div>
   </div>
