--- a/src/app/Components/auth/signup/signup.component.html
+++ b/src/app/Components/auth/signup/signup.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Sign Up</span></p>
+        <p class="breadcrumbs"><span class="mr-2"><a [routerLink]="['/']">Home</a></span> <span></span></p>
         <h1 class="mb-0 bread">Sign Up</h1>
       </div>
     </div>
@@ -11,30 +11,7 @@
 
 <section *ngIf="!isLoading" class="ftco-section contact-section bg-light">
   <div class="container">
-    <!-- <div class="row d-flex mb-5 contact-info">
-      <div class="w-100"></div>
-      <div class="col-md-3 d-flex">
-        <div class="info bg-white p-4">
-          <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-        </div>
-      </div>
-      <div class="col-md-3 d-flex">
-        <div class="info bg-white p-4">
-          <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-        </div>
-      </div>
-      <div class="col-md-3 d-flex">
-        <div class="info bg-white p-4">
-          <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-        </div>
-      </div>
-      <div class="col-md-3 d-flex">
-        <div class="info bg-white p-4">
-          <p><span>Website</span> <a href="#">yoursite.com</a></p>
-        </div>
-      </div>
-    </div> -->
-    <div class="row block-9">
+        <div class="row block-9">
       <div class="col-md-6 order-md-last d-flex">
         <form (submit)="onSignup(signupForm)" #signupForm="ngForm" class="bg-white p-5 contact-form">
           <div class="form-group">
@@ -57,10 +34,7 @@
             <input type="password" name="passwordConfirm" ngModel #passwordConfirmInput="ngModel" class="form-control"
               placeholder="Confirm Password" required="required">
           </div>
-          <!-- <div class="form-group">
-            <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-          </div> -->
-          <div class="form-group">
+          <div class="form-group text-center">
             <input type="submit" value="Register" class="btn btn-primary py-3 px-5">
           </div>
         </form>
@@ -74,9 +48,12 @@
               <!-- <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p> -->
             </div>
           </div>
-          <div class="text-center">Already have an account?
+          <div class="text-center"><h5>Already have an account?</h5>
 
-            <a [routerLink]="['/login']"> Login</a>
+            <!-- <a [routerLink]="['/login']"> Login</a> -->
+          </div>
+          <div class="form-group text-center">
+            <input type="submit" [routerLink]="['/login']" value="Login" class="btn btn-primary py-3 px-5">
           </div>
         </div>
       </div>
