--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -14,8 +14,8 @@
             aria-expanded="false">Shop</a>
           <div class="dropdown-menu" aria-labelledby="dropdown04">
             <a class="dropdown-item" routerLink="/shoplist">Shop</a>
-            <a class="dropdown-item" href="wishlist.html">Wishlist</a>
-            <a class="dropdown-item" href="product-single.html">Single Product</a>
+            <!-- <a class="dropdown-item" href="wishlist.html">Wishlist</a>
+            <a class="dropdown-item" href="product-single.html">Single Product</a> -->
             <a class="dropdown-item" routerLink="/cart">Cart</a>
             <a class="dropdown-item" routerLink="/checkout">Checkout</a>
           </div>
@@ -31,9 +31,9 @@
             <!-- <a class="dropdown-item" href="checkout.html">Checkout</a>  -->
           </div>
         </li>
-        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+        <!-- <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li> -->
         <li class="nav-item cta cta-colored"><a routerLink="/cart" class="nav-link"><span
               class="icon-shopping_cart"></span>{{cartItems}}</a></li>
 
