--- a/src/app/Components/shop/checkout/checkout.component.html
+++ b/src/app/Components/shop/checkout/checkout.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Checkout</span></p>
+        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span></span></p>
         <h1 class="mb-0 bread">Checkout</h1>
       </div>
     </div>
@@ -102,7 +102,7 @@
               <h3 class="billing-heading mb-4">Cart Total</h3>
               <p class="d-flex">
                 <span>Subtotal</span>
-                <span>$20.60</span>
+                <span>{{cartTotal | currency: 'USD'}}</span>
               </p>
               <p class="d-flex">
                 <span>Delivery</span>
@@ -110,12 +110,12 @@
               </p>
               <p class="d-flex">
                 <span>Discount</span>
-                <span>$3.00</span>
+                <span>$0.00</span>
               </p>
               <hr>
               <p class="d-flex total-price">
                 <span>Total</span>
-                <span>$17.60</span>
+                <span>{{cartTotal | currency: 'USD'}}</span>
               </p>
             </div>
           </div>
