--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -442,7 +442,7 @@
 
 <hr>
 
-<section class="ftco-section ftco-partner">
+<!-- <section class="ftco-section ftco-partner">
   <div class="container">
     <div class="row">
       <div class="col-sm ftco-animate">
@@ -462,9 +462,9 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
-<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
+<!-- <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
   <div class="container py-4">
     <div class="row d-flex justify-content-center py-5">
       <div class="col-md-6">
@@ -481,5 +481,5 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- </body> -->
