--- a/src/app/Components/shop/checkout/checkout.component.html
+++ b/src/app/Components/shop/checkout/checkout.component.html
@@ -150,7 +150,8 @@
                   </div>
                 </div>
               </div>
-              <p><a href="#"class="btn btn-primary py-3 px-4">Place an order</a></p>
+              <!-- <p><a href="#"class="btn btn-primary py-3 px-4">Place an order</a></p> -->
+              <p><a (click)="createOrder()" class="btn btn-primary py-3 px-4">Place an Order</a></p>
             </div>
           </div>
         </div>
