--- a/src/app/Components/auth/login/login.component.html
+++ b/src/app/Components/auth/login/login.component.html
@@ -43,10 +43,10 @@
             <div class="or-label">or</div>
             <div class="line-separator"></div>
         </div>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-md-12"> <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline" (click) = "googleLogin()"><img
                   src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using Google</a> </div>
-          </div> <br>
+          </div> <br> -->
         </form>
 
 
