--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -41,7 +41,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a *ngIf="!userIsAuthenticated" class="nav-link" routerLink="/login">Login</a></li>
         <li class="nav-item"><a *ngIf="!userIsAuthenticated" class="nav-link" routerLink="/signup">Sign Up</a></li>
-        <li class="nav-item"><a *ngIf="userIsAuthenticated" class="nav-link" (click)="onLogout()">Logout</a></li>
+        <li class="nav-item"><a *ngIf="userIsAuthenticated" class="nav-link cursor" (click)="onLogout()">Logout</a></li>
       </ul>
     </div>
   </div>
