--- a/src/app/Components/products/product-list/product-list.component.html
+++ b/src/app/Components/products/product-list/product-list.component.html
@@ -17,7 +17,7 @@
           <table class="table">
             <thead class="thead-primary">
               <tr class="text-center">
-                <th>&nbsp;</th>
+                <!-- <th>&nbsp;</th> -->
                 <th>S/N</th>
                 <th>Name</th>
                 <th>&nbsp;</th>
@@ -31,7 +31,7 @@
             </thead>
             <tbody>
               <tr class="text-center" *ngFor="let product of products; let ndx = index">
-                <td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
+                <!-- <td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td> -->
                 <td>{{ndx+1}}</td>
                 <td class="product-name">
                   {{product.name}}
@@ -59,6 +59,8 @@
 
             </tbody>
           </table>
+          <mat-paginator [length]="totalProducts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions"
+    (page)="onChangedPage($event)" *ngIf="products.length > 0"></mat-paginator>
         </div>
       </div>
     </div>
