--- a/src/app/Components/shop/shop-list-item/shop-list-item.component.html
+++ b/src/app/Components/shop/shop-list-item/shop-list-item.component.html
@@ -11,15 +11,15 @@
     </div>
     <div class="bottom-area d-flex px-3">
       <div class="m-auto d-flex">
-        <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+        <!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
           <span><i class="ion-ios-menu"></i></span>
-        </a>
+        </a> -->
         <a class="buy-now d-flex justify-content-center align-items-center mx-1" (click)="handleAddToCart()">
           <span><i class="ion-ios-cart"></i></span>
         </a>
-        <a href="#" class="heart d-flex justify-content-center align-items-center ">
+        <!-- <a href="#" class="heart d-flex justify-content-center align-items-center ">
           <span><i class="ion-ios-heart"></i></span>
-        </a>
+        </a> -->
       </div>
     </div>
   </div>
