--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -33,7 +33,7 @@
   <div class="col-sm-12 ftco-animate text-center text-white">
     <h1 class="mb-2 text-white new-font">100% Fresh &amp; Organic Foods</h1>
     <h2 class="subheading mb-4 text-white font-2">We deliver organic vegetables &amp; fruits</h2>
-    <p><a href="#" class="btn btn-primary text-white">View Details</a></p>
+    <!-- <p><a href="#" class="btn btn-primary text-white">View Details</a></p> -->
   </div>
 </section>
 <section class="ftco-section">
@@ -94,13 +94,16 @@
       <div class="col-md-12 heading-section text-center ftco-animate">
         <span class="subheading">Featured Products</span>
         <h2 class="mb-4">Our Products</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+        <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-lg-3 ftco-animate">
+      <div class="col-md-6 col-lg-3 ftco-animate" *ngFor="let product of products; let ndx = index">
+        <app-home-products [productItem]="product"></app-home-products>
+      </div>
+      <!-- <div class="col-md-6 col-lg-3 ftco-animate">
         <div class="product">
           <a href="#" class="img-prod"><img class="img-fluid" src="../../../assets/images/product-1.jpg" alt="Colorlib Template">
             <span class="status">30%</span>
@@ -212,10 +215,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
-      <div class="col-md-6 col-lg-3 ftco-animate">
+      <!-- <div class="col-md-6 col-lg-3 ftco-animate">
         <div class="product">
           <a href="#" class="img-prod"><img class="img-fluid" src="../../../assets/images/product-5.jpg" alt="Colorlib Template">
             <span class="status">30%</span>
@@ -327,7 +330,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
