--- a/src/app/Components/auth/signup/signup.component.html
+++ b/src/app/Components/auth/signup/signup.component.html
@@ -37,6 +37,17 @@
           <div class="form-group text-center">
             <input type="submit" value="Register" class="btn btn-primary py-3 px-5">
           </div>
+
+          <div class="or-container">
+            <div class="line-separator"></div>
+            <div class="or-label">or</div>
+            <div class="line-separator"></div>
+          </div>
+           <div class="row">
+            <div class="col-md-12"> <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline loginBtn loginBtn--google" #loginRef
+                ><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using
+                Google</a> </div>
+          </div> <br>
         </form>
 
       </div>
