--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -11,7 +11,7 @@
       <div class="col-md">
         <div class="ftco-footer-widget mb-4">
           <h2 class="ftco-heading-2">Vegefoods</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+          <p>Stay Healthy!</p>
           <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="col-md">
-        <div class="ftco-footer-widget mb-4 ml-md-5">
+        <!-- <div class="ftco-footer-widget mb-4 ml-md-5">
           <h2 class="ftco-heading-2">Menu</h2>
           <ul class="list-unstyled">
             <li><a href="#" class="py-2 d-block">Shop</a></li>
@@ -28,9 +28,9 @@
             <li><a href="#" class="py-2 d-block">Journal</a></li>
             <li><a href="#" class="py-2 d-block">Contact Us</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
-      <div class="col-md-4">
+      <!-- <div class="col-md-4">
          <div class="ftco-footer-widget mb-4">
           <h2 class="ftco-heading-2">Help</h2>
           <div class="d-flex">
@@ -46,15 +46,15 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="col-md">
+      </div> -->
+      <div class="col-md-4">
         <div class="ftco-footer-widget mb-4">
-          <h2 class="ftco-heading-2">Have a Questions?</h2>
+          <h2 class="ftco-heading-2">Have a Question?</h2>
           <div class="block-23 mb-3">
             <ul>
-              <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+              <li><span class="icon icon-map-marker"></span><span class="text">Lagos, Nigeria</span></li>
               <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-              <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+              <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hellofromvegefoods@gmail.com</span></a></li>
             </ul>
           </div>
         </div>
