--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -13,11 +13,12 @@
           <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Shop</a>
           <div class="dropdown-menu" aria-labelledby="dropdown04">
-            <a class="dropdown-item" routerLink="/shoplist">Shop</a>
+            <a class="dropdown-item" routerLink="/shoplist">Menu</a>
             <!-- <a class="dropdown-item" href="wishlist.html">Wishlist</a>
             <a class="dropdown-item" href="product-single.html">Single Product</a> -->
             <a class="dropdown-item" routerLink="/cart">Cart</a>
             <a class="dropdown-item" routerLink="/checkout">Checkout</a>
+            <a class="dropdown-item" routerLink="/myorders">Orders</a>
           </div>
         </li>
         <li class="nav-item dropdown" *ngIf="userIsAdmin === 'admin' && userIsAuthenticated">
@@ -35,7 +36,7 @@
         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li> -->
         <li class="nav-item cta cta-colored"><a routerLink="/cart" class="nav-link"><span
-              class="icon-shopping_cart"></span>{{cartItems}}</a></li>
+              class="icon-shopping_cart"></span>{{cartcount}}</a></li>
 
       </ul>
       <ul class="navbar-nav ml-auto">
