--- a/src/app/Components/orders/order-list/order-list.component.html
+++ b/src/app/Components/orders/order-list/order-list.component.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Products</span></p>
+        <p class="breadcrumbs"><span class="mr-2"><a [routerLink]="['/']">Home</a></span> <span></span></p>
         <h1 class="mb-0 bread">Orders</h1>
       </div>
     </div>
   </div>
 </div>
 
-<section class="ftco-section ftco-cart">
+<section *ngIf="!isLoading" class="ftco-section ftco-cart">
   <div class="container">
     <div class="row">
       <div class="col-md-12 ftco-animate">
@@ -54,9 +54,15 @@
             </tbody>
           </table>
           <mat-paginator [length]="totalOrders" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions"
-          (page)="onChangedPage($event)" *ngIf="orders.length > 0"></mat-paginator>
+            (page)="onChangedPage($event)" *ngIf="orders.length > 0"></mat-paginator>
         </div>
       </div>
     </div>
   </div>
 </section>
+
+<!-- loader -->
+<div *ngIf="isLoading" id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+    <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+    <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" />
+  </svg></div>
