--- a/src/app/Components/shop/cart/cart.component.html
+++ b/src/app/Components/shop/cart/cart.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Cart</span></p>
+        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span></span></p>
         <h1 class="mb-0 bread">My Cart</h1>
       </div>
     </div>
@@ -10,7 +10,7 @@
 </div>
 
 
-<section class="ftco-section ftco-cart" >
+<section *ngIf="!isLoading" class="ftco-section ftco-cart" >
   <div class="container">
     <div class="row">
       <div class="col-md-12 ftco-animate">
@@ -19,7 +19,7 @@
           <table class="table">
             <thead class="thead-primary">
               <tr class="text-center">
-                <!-- <th>Remove</th> -->
+                <th>Remove</th>
                 <th>S/N</th>
                 <th>Image</th>
                 <th>Product name</th>
@@ -35,7 +35,7 @@
 
 
               <tr class="text-center" *ngFor="let item of cartObj; let ndx = index" >
-                <!-- <td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td> -->
+                <td class="product-remove"><a (click)="removeProductFromCart(item.productId)"><span class="ion-ios-close"></span></a></td>
                 <td>{{ndx+1}}</td>
                 <td class="image-prod" >
                   <!-- <div class="img" > -->
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="row justify-content-end">
-      <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
+      <!-- <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
         <div class="cart-total mb-3">
           <h3>Coupon Code</h3>
           <p>Enter your coupon code if you have one</p>
@@ -73,8 +73,8 @@
           </form>
         </div>
         <p><a href="checkout.html" class="btn btn-primary py-3 px-4">Apply Coupon</a></p>
-      </div>
-      <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
+      </div> -->
+      <!-- <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
         <div class="cart-total mb-3">
           <h3>Estimate shipping and tax</h3>
           <p>Enter your destination to get a shipping estimate</p>
@@ -94,7 +94,7 @@
           </form>
         </div>
         <p><a href="checkout.html" class="btn btn-primary py-3 px-4">Estimate</a></p>
-      </div>
+      </div> -->
       <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
         <div class="cart-total mb-3">
           <h3>Cart Totals</h3>
@@ -122,3 +122,9 @@
     </div>
   </div>
 </section>
+<!-- loader -->
+<div *ngIf="isLoading" id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+  <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+  <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" />
+  </svg></div>
+
