--- a/src/app/Components/shop/checkout/checkout.component.html
+++ b/src/app/Components/shop/checkout/checkout.component.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span></span></p>
+        <p class="breadcrumbs"><span class="mr-2"><a [routerLink]="['']">Home</a></span> <span></span></p>
         <h1 class="mb-0 bread">Checkout</h1>
       </div>
     </div>
   </div>
 </div>
 
-<section class="ftco-section">
+<section *ngIf="!isLoading" class="ftco-section">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-xl-7 ftco-animate">
@@ -119,7 +119,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12" *ngIf="cartTotal > 0">
             <div class="cart-detail p-3 p-md-4">
               <h3 class="billing-heading mb-4">Payment Method</h3>
               <div class="form-group">
@@ -159,3 +159,9 @@
     </div>
   </div>
 </section> <!-- .section -->
+
+<!-- loader -->
+<div *ngIf="isLoading" id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+  <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+  <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" />
+</svg></div>
