--- a/src/app/Components/shop/shop-list-item/shop-list-item.component.html
+++ b/src/app/Components/shop/shop-list-item/shop-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="product">
-  <a href="#" class="img-prod"><img class="responsive–image" [src]=productItem.imagePath [alt]=productItem.name>
+  <a class="img-prod"><img class="responsive–image" [src]=productItem.imagePath [alt]=productItem.name>
     <div class="overlay"></div>
   </a>
   <div class="text py-3 pb-4 px-3 text-center">
