--- a/src/app/Components/shop/shop-list/shop-list.component.html
+++ b/src/app/Components/shop/shop-list/shop-list.component.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Products</span></p>
+        <p class="breadcrumbs"><span class="mr-2"><a [routerLink]="['']">Home</a></span> <span></span></p>
         <h1 class="mb-0 bread">Shop</h1>
       </div>
     </div>
   </div>
 </div>
 
-<section class="ftco-section">
+<section *ngIf="!isLoading" class="ftco-section">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-10 mb-5 text-center">
@@ -22,355 +22,12 @@
         </ul>
       </div>
     </div>
-    <div class="row" >
+    <div class="row">
       <div class="col-md-6 col-lg-3 ftco-animate" *ngFor="let product of products; let ndx = index">
         <app-shop-list-item [productItem]="product"></app-shop-list-item>
       </div>
-
-      <!-- <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-1.jpg" alt="Colorlib Template">
-            <span class="status">30%</span>
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Bell Pepper</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span class="mr-2 price-dc">$120.00</span><span class="price-sale">$80.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-      <!-- <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-2.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Strawberry</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-3.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Green Beans</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-4.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Purple Cabbage</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-
-      <!-- <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-5.jpg" alt="Colorlib Template">
-            <span class="status">30%</span>
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Tomatoe</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span class="mr-2 price-dc">$120.00</span><span class="price-sale">$80.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-6.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Brocolli</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-7.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Carrots</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-8.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Fruit Juice</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-9.jpg" alt="Colorlib Template">
-            <span class="status">30%</span>
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Onion</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span class="mr-2 price-dc">$120.00</span><span class="price-sale">$80.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-10.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Apple</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-11.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Garlic</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"><img class="img-fluid" src="../../../../assets/images/product-12.jpg" alt="Colorlib Template">
-            <div class="overlay"></div>
-          </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">Chilli</a></h3>
-            <div class="d-flex">
-              <div class="pricing">
-                <p class="price"><span>$120.00</span></p>
-              </div>
-            </div>
-            <div class="bottom-area d-flex px-3">
-              <div class="m-auto d-flex">
-                <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
-                <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                  <span><i class="ion-ios-cart"></i></span>
-                </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                  <span><i class="ion-ios-heart"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
       <div class="col text-center">
         <div class="block-27">
           <ul>
@@ -384,6 +41,13 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
+
+
+<!-- loader -->
+<div *ngIf="isLoading" id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+  <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+  <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" />
+</svg></div>
