--- a/src/app/Components/shop/thank-you/thank-you.component.html
+++ b/src/app/Components/shop/thank-you/thank-you.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span></span></p>
+        <p class="breadcrumbs"><span class="mr-2"><a [routerLink]="['']">Home</a></span> <span></span></p>
         <h1 class="mb-0 bread">Thank you</h1>
       </div>
     </div>
@@ -15,4 +15,4 @@
      <h3>Your Order is being Processed</h3>
     </div>
   </div>
-</section> <!-- .section -->
+</section>
