--- a/src/app/Components/shop/checkout/checkout.component.html
+++ b/src/app/Components/shop/checkout/checkout.component.html
@@ -121,7 +121,7 @@
           </div>
           <div class="col-md-12" *ngIf="cartTotal > 0">
             <div class="cart-detail p-3 p-md-4">
-              <h3 class="billing-heading mb-4">Payment Method</h3>
+              <!-- <h3 class="billing-heading mb-4">Payment Method</h3>
               <div class="form-group">
                 <div class="col-md-12">
                   <div class="radio">
@@ -149,9 +149,8 @@
                      <label><input type="checkbox" value="" class="mr-2"> I have read and accept the terms and conditions</label>
                   </div>
                 </div>
-              </div>
-              <!-- <p><a href="#"class="btn btn-primary py-3 px-4">Place an order</a></p> -->
-              <p><a (click)="createOrder()" class="btn btn-primary py-3 px-4">Place an Order</a></p>
+              </div> -->
+              <p><a (click)="createOrder()" class="btn btn-primary py-3 px-4">Pay For Order</a></p>
             </div>
           </div>
         </div>
