--- a/src/app/Components/auth/login/login.component.html
+++ b/src/app/Components/auth/login/login.component.html
@@ -24,28 +24,27 @@
           <div class="form-group">
             <input type="email" ngModel name="email" #emailInput="ngModel" class="form-control" placeholder="Your Email"
               required="required">
+            <span class="text-danger" *ngIf="(emailInput.touched || loginForm.submitted) && emailInput.errors?.required">
+              Email is required
+            </span>
           </div>
           <div class="form-group">
             <input type="password" name="password" ngModel #passwordInput="ngModel" class="form-control"
               placeholder="Password" required="required">
+              
           </div>
-          <!-- <div class="form-group">
-            <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-          </div> -->
           <div class="form-group text-center">
             <input type="submit" value="Login" class="btn btn-primary py-3 px-5">
           </div>
-          <!-- <div class="form-group">
-            Login with <a href="#"><span class="icon-google"></span></a>
-          </div> -->
           <div class="or-container">
             <div class="line-separator"></div>
             <div class="or-label">or</div>
             <div class="line-separator"></div>
           </div>
-           <div class="row">
-            <div class="col-md-12"> <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline loginBtn loginBtn--google" #loginRef
-                ><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using
+          <div class="row">
+            <div class="col-md-12"> <a
+                class="btn btn-lg btn-google btn-block text-uppercase btn-outline loginBtn loginBtn--google"
+                #loginRef><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using
                 Google</a> </div>
           </div> <br>
 
