--- a/src/styles.css
+++ b/src/styles.css
@@ -10016,3 +10016,13 @@ textarea.form-control {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.notif-success {
+  color: white !important;
+  background-color: #82ae46 !important;
+  border-color: #c3e6cb !important;
+  /* .mat-simple-snackbar-action {
+      color: #155724 !important;
+  } */
+}
