--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -102,7 +102,19 @@
       <div class="col-md-7 heading-section ftco-animate text-center">
         <span class="subheading">Testimony</span>
         <h2 class="mb-4">Our satisfied customer says</h2>
-        <p>Great Service! </p>
+        <!-- <p>Great Service! </p> -->
+      </div>
+      <div class="testimony-wrap p-4 pb-5">
+        <div class="user-img mb-5" style="background-image: url(../../../assets/images/woman.jpg)">
+          <span class="quote d-flex align-items-center justify-content-center">
+            <i class="icon-quote-left"></i>
+          </span>
+        </div>
+        <div class="text text-center">
+          <p class="mb-5 pl-4 line">Top Notch Service, Quality food at great price and fast delivery.</p>
+          <p class="name">Mary Smith</p>
+          <!-- <span class="position">Marketing Manager</span> -->
+        </div>
       </div>
     </div>
     <div class="row ftco-animate">
@@ -116,7 +128,8 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
+                  Consonantia, there live the blind texts.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Marketing Manager</span>
               </div>
@@ -130,7 +143,8 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
+                  Consonantia, there live the blind texts.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Interface Designer</span>
               </div>
@@ -144,7 +158,8 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
+                  Consonantia, there live the blind texts.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">UI Designer</span>
               </div>
@@ -158,7 +173,8 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
+                  Consonantia, there live the blind texts.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Web Developer</span>
               </div>
@@ -172,7 +188,8 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
+                  Consonantia, there live the blind texts.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">System Analyst</span>
               </div>
@@ -183,5 +200,61 @@
     </div>
   </div>
 </section>
+
+<hr>
+
+<section class="ftco-section ftco-partner">
+  <div class="container">
+    <div class="row justify-content-center mb-3 pb-3">
+      <div class="col-md-12 heading-section text-center ftco-animate">
+        <span class="subheading">Meet the Team</span>
+         <h2 class="mb-4">The Team</h2>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+
+      <div class="col-sm ftco-animate">
+        <div>
+          <a class="partner"><img src="https://ca.slack-edge.com/TJ83SA0BW-UJAQLU2EA-c705ae478e69-512" class="img-fluid" alt="team memeber"></a>
+        </div>
+        <div class="p-2 text text-center">
+          <p class="name"><strong>Ada Nduka Oyom</strong></p>
+          <span class="position">SCA Founder</span>
+        </div>
+      </div>
+      <div class="col-sm ftco-animate">
+        <div>
+          <a  class="partner"><img src="https://ca.slack-edge.com/TJ83SA0BW-U013SBXKUEL-06bec6c453c9-512" class="img-fluid" alt="team member"></a>
+        </div>
+        <div class="p-2 text text-center">
+          <p class="name"><strong>Idris Olubisi</strong></p>
+          <span class="position">SCA Mentor</span>
+        </div>
+      </div>
+      <div class="col-sm ftco-animate">
+        <div>
+          <a class="partner"><img src="https://ca.slack-edge.com/TJ83SA0BW-U0124KVJUT1-0ee0a5d3ffed-512" class="img-fluid" alt="team member"></a>
+        </div>
+        <div class="p-2 text text-center">
+          <p class="name"><strong>Oremei Akande</strong> </p>
+          <span class="position">Developer</span>
+        </div>
+      </div>
+      <div class="col-sm ftco-animate">
+        <div>
+          <a class="partner"><img src="https://ca.slack-edge.com/TJ83SA0BW-U012Y8J61SP-dd6a56b725ba-512" class="img-fluid" alt="team member"></a>
+        </div>
+        <div class="p-2 text text-center">
+          <p class="name"><strong>Omolola Omolambe</strong></p>
+          <span class="position">Developer</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
 
 <hr>
