--- a/src/app/Components/shop/cart/cart.component.html
+++ b/src/app/Components/shop/cart/cart.component.html
@@ -29,11 +29,6 @@
               </tr>
             </thead>
             <tbody>
-              <!-- <tr class="text-center" *ngFor="let item of cartItems; let ndx = index">
-                <app-cart-item [cartItem]="item" ></app-cart-item>
-              </tr> -->
-
-
               <tr class="text-center" *ngFor="let item of cartObj; let ndx = index" >
                 <td class="product-remove"><a (click)="removeProductFromCart(item.productId)"><span class="ion-ios-close"></span></a></td>
                 <td>{{ndx+1}}</td>
@@ -61,40 +56,6 @@
       </div>
     </div>
     <div class="row justify-content-end" *ngIf="cartObj.length != 0" >
-      <!-- <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
-        <div class="cart-total mb-3">
-          <h3>Coupon Code</h3>
-          <p>Enter your coupon code if you have one</p>
-          <form action="#" class="info">
-            <div class="form-group">
-              <label for="">Coupon code</label>
-              <input type="text" class="form-control text-left px-3" placeholder="">
-            </div>
-          </form>
-        </div>
-        <p><a href="checkout.html" class="btn btn-primary py-3 px-4">Apply Coupon</a></p>
-      </div> -->
-      <!-- <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
-        <div class="cart-total mb-3">
-          <h3>Estimate shipping and tax</h3>
-          <p>Enter your destination to get a shipping estimate</p>
-          <form action="#" class="info">
-            <div class="form-group">
-              <label for="">Country</label>
-              <input type="text" class="form-control text-left px-3" placeholder="">
-            </div>
-            <div class="form-group">
-              <label for="country">State/Province</label>
-              <input type="text" class="form-control text-left px-3" placeholder="">
-            </div>
-            <div class="form-group">
-              <label for="country">Zip/Postal Code</label>
-              <input type="text" class="form-control text-left px-3" placeholder="">
-            </div>
-          </form>
-        </div>
-        <p><a href="checkout.html" class="btn btn-primary py-3 px-4">Estimate</a></p>
-      </div> -->
       <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
         <div class="cart-total mb-3">
           <h3>Cart Totals</h3>
@@ -104,11 +65,7 @@
           </p>
           <p class="d-flex">
             <span>Delivery</span>
-            <span>$0.00</span>
-          </p>
-          <p class="d-flex">
-            <span>Discount</span>
-            <span>$0.00</span>
+            <span>{{deliveryCost | currency: 'USD'}}</span>
           </p>
           <hr>
           <p class="d-flex total-price">
